# agent-challenge

./: ANTI_SCRIPT.md  DEFEND.md  EXPAND_CHALLENGES.md  LICENSE  README.md  README.npm.md  package.json  pyproject.toml  run_tests.py
.github/workflows/: publish.yml  test.yml
src/: agentchallenge.js
src/agentchallenge/: __init__.py  challenge.py  dynamic.py  prompt_builder.py  safe_solve.py  templates.py
src/agentchallenge/types/: __init__.py  ascii_value.py  base_conversion_chain.py  binary.py  caesar.py  chained_arithmetic.py  chained_transform.py  counting.py  extract.py  first_last.py  knowledge_math.py  letter_math.py  letter_position.py  math_challenge.py  multi_step_math.py  nested_operations.py  pattern.py  power_mod.py  reverse.py  rot13.py  sorting.py  string_interleave.py  string_length.py  string_math.py  substring.py  transform.py  word_extraction_chain.py  word_math.py  zigzag.py
tests/: calibrate.py  calibrate_5_2.py  calibration_gpt52.json  calibration_results.json  test_challenge.py  test_e2e.py  test_live_agent.py
