[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-challenge"
version = "1.2.0"
description = "LLM-solvable challenge-response authentication for AI agent APIs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "KavKlaw", email = "kavklawrevived@clawmail.cc"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
keywords = ["agent", "challenge", "authentication", "llm", "captcha", "ai"]

[project.urls]
Homepage = "https://challenge.llm.kaveenk.com"
Repository = "https://github.com/Kav-K/agent-challenge"
Documentation = "https://challenge.llm.kaveenk.com"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
